cloudformation/challenge2/challenge2.yml
Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this vpc
    Type: String
    Default: 10.0.0.0/16

  PublicSubnetCIDR:
      Description: Please enter the IP range (CIDR notation) for the public subnet
      Type: String
      Default: 10.0.1.0/24

  PrivateSubnetCIDR:
      Description: Please enter the IP range (CIDR notation) for the private subnet
      Type: String
      Default: 10.0.2.0/24

Resources:
  VPC: 
      Type: AWS::EC2::VPC
      Properties:
          CidrBlock: !Ref VpcCIDR
          EnableDnsHostnames: true
          Tags: 
              - Key: Name 
                Value: !Ref EnvironmentName

  InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: !Ref EnvironmentName
          
  InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC

  PublicSubnet: 
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [ 0, !GetAZs '' ]
          CidrBlock: !Ref PublicSubnetCIDR
          MapPublicIpOnLaunch: true
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Public

  PrivateSubnet: 
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [ 0, !GetAZs '' ]
          CidrBlock: !Ref PrivateSubnetCIDR
          MapPublicIpOnLaunch: false
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Private

  NatGatewayEIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGatewayAttachment
      Properties:
          Domain: vpc

  NatGateway: 
      Type: AWS::EC2::NatGateway
      Properties: 
          AllocationId: !GetAtt NatGatewayEIP.AllocationId
          SubnetId: !Ref PublicSubnet

  PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
          VpcId: !Ref VPC
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Public Route Table

  DefaultPublicRoute: 
      Type: AWS::EC2::Route
      DependsOn: InternetGatewayAttachment
      Properties: 
          RouteTableId: !Ref PublicRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PublicRouteTable
          SubnetId: !Ref PublicSubnet

  PrivateRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
          VpcId: !Ref VPC
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Private Route Table

  DefaultPrivateRoute:
      Type: AWS::EC2::Route
      Properties:
          RouteTableId: !Ref PrivateRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NatGateway

  PrivateSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
          RouteTableId: !Ref PrivateRouteTable
          SubnetId: !Ref PrivateSubnet

Outputs: 

  VPC: 
      Description: A reference to the created VPC
      Value: !Ref VPC
      Export:
        Name: !Sub ${EnvironmentName}-VPCID

  VPCPublicRouteTable:
      Description: Public Route Table
      Value: !Ref PublicRouteTable
      Export:
        Name: !Sub ${EnvironmentName}-PUB-RT

  VPCPrivateRouteTable:
      Description: Private Route Table
      Value: !Ref PrivateRouteTable
      Export:
        Name: !Sub ${EnvironmentName}-PRI-RT

  Subnets:
      Description: A list of the subnets
      Value: !Join [ ",", [ !Ref PublicSubnet, !Ref PrivateSubnet ]]
      Export:
        Name: !Sub ${EnvironmentName}-NETS

  PublicSubnet: 
      Description: A reference to the public subnet
      Value: !Ref PublicSubnet
      Export:
        Name: !Sub ${EnvironmentName}-PUB-SN

  PrivateSubnet:
      Description: A reference to the private subnet
      Value: !Ref PrivateSubnet
      Export:
        Name: !Sub ${EnvironmentName}-PRI-SN
